--- a/Lab 1/README.me
+++ b/Lab 1/README.me
@@ -1,1 +1,2 @@
-## This file is created by Cihan Yurtsever and Alessandro Cavalli.
+## This file is created by Cihan Yurtsever and Alessandro Cavalli. 
+The document will be updated in each two weeks.
